Fixed favicons not hiding in Chromium 1 - 11 when tabs are too small

--- a/Profile Folder/chrome/styles/partials/chrome/chrome-1/_tabs.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-1/_tabs.scss
@@ -268,6 +268,11 @@
 
 			color: var(--tabbrowser-tab-color, var(--default-tabbrowser-tab-color)) !important;
 
+			&[minwidthreached="true"] .tab-icon-stack {
+				visibility: hidden !important;
+				position: absolute !important;
+			}
+
 			.tab-background-container {
 				&::before {
 					background: var(--selected-tab-background, var(--default-selected-tab-background));
