--- a/Profile Folder/chrome/styles/partials/chrome/chrome-21/_tabs.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-21/_tabs.scss
@@ -87,7 +87,6 @@
 		justify-content: end !important;
 	}
 
-	.tab-icon-stack,
 	.tab-label-container {
 		visibility: hidden !important;
 		position: absolute !important;
